--- a/data/cards/25533642.yaml
+++ b/data/cards/25533642.yaml
@@ -59,6 +59,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: MZMI-EN064
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   de:
   - set_number: CIBR-DE014
     set_name: Circuit Break
@@ -70,6 +74,10 @@ sets:
     - Ultra Rare
   - set_number: MGED-DE093
     set_name: 'Maximum Gold: El Dorado'
+    rarities:
+    - Rare
+  - set_number: MZMI-DE064
+    set_name: Maze of Millennia
     rarities:
     - Rare
   fr:
@@ -85,6 +93,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: MZMI-FR064
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   it:
   - set_number: CIBR-IT014
     set_name: Circuit Break
@@ -98,6 +110,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: MZMI-IT064
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   pt:
   - set_number: CIBR-PT014
     set_name: Circuit Break
@@ -109,6 +125,10 @@ sets:
     - Ultra Rare
   - set_number: MGED-PT093
     set_name: 'Maximum Gold: El Dorado'
+    rarities:
+    - Rare
+  - set_number: MZMI-PT064
+    set_name: Maze of Millennia
     rarities:
     - Rare
   ja:
