--- a/data/cards/42790071.yaml
+++ b/data/cards/42790071.yaml
@@ -61,6 +61,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: MZMI-EN065
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   de:
   - set_number: FLOD-DE014
     set_name: Flames of Destruction
@@ -72,6 +76,10 @@ sets:
     - Prismatic Secret Rare
   - set_number: MGED-DE095
     set_name: 'Maximum Gold: El Dorado'
+    rarities:
+    - Rare
+  - set_number: MZMI-DE065
+    set_name: Maze of Millennia
     rarities:
     - Rare
   fr:
@@ -87,6 +95,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: MZMI-FR065
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   it:
   - set_number: FLOD-IT014
     set_name: Flames of Destruction
@@ -100,6 +112,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: MZMI-IT065
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   pt:
   - set_number: FLOD-PT014
     set_name: Flames of Destruction
@@ -111,6 +127,10 @@ sets:
     - Prismatic Secret Rare
   - set_number: MGED-PT095
     set_name: 'Maximum Gold: El Dorado'
+    rarities:
+    - Rare
+  - set_number: MZMI-PT065
+    set_name: Maze of Millennia
     rarities:
     - Rare
   ja:
