--- a/data/cards/44710391.yaml
+++ b/data/cards/44710391.yaml
@@ -54,6 +54,10 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Common
+  - set_number: MZMI-EN052
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   de:
   - set_number: LED5-DE026
     set_name: 'Legendary Duelists: Immortal Destiny'
@@ -63,6 +67,10 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Common
+  - set_number: MZMI-DE052
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   fr:
   - set_number: LED5-FR026
     set_name: 'Legendary Duelists: Immortal Destiny'
@@ -72,6 +80,10 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Common
+  - set_number: MZMI-FR052
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   it:
   - set_number: LED5-IT026
     set_name: 'Legendary Duelists: Immortal Destiny'
@@ -81,6 +93,10 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Common
+  - set_number: MZMI-IT052
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   pt:
   - set_number: LED5-PT026
     set_name: 'Legendary Duelists: Immortal Destiny'
@@ -90,6 +106,10 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Common
+  - set_number: MZMI-PT052
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   ja:
   - set_number: DP22-JP026
     set_name: 'Duelist Pack: Legend Duelist 5'
