--- a/data/cards/71948047.yaml
+++ b/data/cards/71948047.yaml
@@ -53,26 +53,46 @@ sets:
     set_name: Cyberstorm Access
     rarities:
     - Common
+  - set_number: MZMI-EN079
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   de:
   - set_number: CYAC-DE075
     set_name: Cyberstorm Access
     rarities:
     - Common
+  - set_number: MZMI-DE079
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   fr:
   - set_number: CYAC-FR075
     set_name: Cyberstorm Access
     rarities:
     - Common
+  - set_number: MZMI-FR079
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   it:
   - set_number: CYAC-IT075
     set_name: Cyberstorm Access
     rarities:
     - Common
+  - set_number: MZMI-IT079
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   pt:
   - set_number: CYAC-PT075
     set_name: Cyberstorm Access
     rarities:
     - Common
+  - set_number: MZMI-PT079
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   ja:
   - set_number: CYAC-JP075
     set_name: Cyberstorm Access
