--- a/data/cards/84869738.yaml
+++ b/data/cards/84869738.yaml
@@ -48,26 +48,46 @@ sets:
     set_name: Code of the Duelist
     rarities:
     - Common
+  - set_number: MZMI-EN061
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   de:
   - set_number: COTD-DE070
     set_name: Code of the Duelist
     rarities:
     - Common
+  - set_number: MZMI-DE061
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   fr:
   - set_number: COTD-FR070
     set_name: Code of the Duelist
     rarities:
     - Common
+  - set_number: MZMI-FR061
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   it:
   - set_number: COTD-IT070
     set_name: Code of the Duelist
     rarities:
     - Common
+  - set_number: MZMI-IT061
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   pt:
   - set_number: COTD-PT070
     set_name: Code of the Duelist
     rarities:
     - Common
+  - set_number: MZMI-PT061
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   ja:
   - set_number: COTD-JP070
     set_name: Code of the Duelist
