--- a/data/cards/89538537.yaml
+++ b/data/cards/89538537.yaml
@@ -64,6 +64,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: MZMI-EN063
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   de:
   - set_number: CIBR-DE013
     set_name: Circuit Break
@@ -80,6 +84,10 @@ sets:
     - Super Rare
   - set_number: MGED-DE092
     set_name: 'Maximum Gold: El Dorado'
+    rarities:
+    - Rare
+  - set_number: MZMI-DE063
+    set_name: Maze of Millennia
     rarities:
     - Rare
   fr:
@@ -100,6 +108,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: MZMI-FR063
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   it:
   - set_number: CIBR-IT013
     set_name: Circuit Break
@@ -118,6 +130,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: MZMI-IT063
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   pt:
   - set_number: CIBR-PT013
     set_name: Circuit Break
@@ -134,6 +150,10 @@ sets:
     - Super Rare
   - set_number: MGED-PT092
     set_name: 'Maximum Gold: El Dorado'
+    rarities:
+    - Rare
+  - set_number: MZMI-PT063
+    set_name: Maze of Millennia
     rarities:
     - Rare
   ja:
