--- a/data/cards/99162522.yaml
+++ b/data/cards/99162522.yaml
@@ -53,9 +53,17 @@ sets:
     set_name: Amazing Defenders
     rarities:
     - Rare
+  - set_number: MZMI-EN080
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   de:
   - set_number: AMDE-DE012
     set_name: Amazing Defenders
+    rarities:
+    - Rare
+  - set_number: MZMI-DE080
+    set_name: Maze of Millennia
     rarities:
     - Rare
   fr:
@@ -63,14 +71,26 @@ sets:
     set_name: Amazing Defenders
     rarities:
     - Rare
+  - set_number: MZMI-FR080
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   it:
   - set_number: AMDE-IT012
     set_name: Amazing Defenders
     rarities:
     - Rare
+  - set_number: MZMI-IT080
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   pt:
   - set_number: AMDE-PT012
     set_name: Amazing Defenders
+    rarities:
+    - Rare
+  - set_number: MZMI-PT080
+    set_name: Maze of Millennia
     rarities:
     - Rare
   ja:
