--- a/data/series/list.yaml
+++ b/data/series/list.yaml
@@ -2770,6 +2770,18 @@
   ko_rr: Singkeuro Deuraegon
   zh-TW:
   zh-CN:
+- en: Raika
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>蕾禍<rt>ライカ</rt></ruby>
+  ja_romaji: Raika
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
 - en: Rainbow Bridge
   de: Regenbogenbrücke
   es: Puente de Arco Iris
