--- a/data/cards/00645794.yaml
+++ b/data/cards/00645794.yaml
@@ -65,26 +65,46 @@ sets:
     set_name: Breakers of Shadow
     rarities:
     - Super Rare
+  - set_number: MZMI-EN074
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   de:
   - set_number: BOSH-DE030
     set_name: Breakers of Shadow
     rarities:
     - Super Rare
+  - set_number: MZMI-DE074
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   fr:
   - set_number: BOSH-FR030
     set_name: Breakers of Shadow
     rarities:
     - Super Rare
+  - set_number: MZMI-FR074
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   it:
   - set_number: BOSH-IT030
     set_name: Breakers of Shadow
     rarities:
     - Super Rare
+  - set_number: MZMI-IT074
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   pt:
   - set_number: BOSH-PT030
     set_name: Breakers of Shadow
     rarities:
     - Super Rare
+  - set_number: MZMI-PT074
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   ja:
   - set_number: BOSH-JP030
     set_name: Breakers of Shadow
