--- a/data/cards/01508649.yaml
+++ b/data/cards/01508649.yaml
@@ -71,6 +71,10 @@ sets:
     set_name: 2018 Mega-Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: MZMI-EN066
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   de:
   - set_number: EXFO-DE046
     set_name: Extreme Force
@@ -84,6 +88,10 @@ sets:
     set_name: 2018 Mega-Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: MZMI-DE066
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   fr:
   - set_number: EXFO-FR046
     set_name: Extreme Force
@@ -97,6 +105,10 @@ sets:
     set_name: 2018 Mega-Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: MZMI-FR066
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   it:
   - set_number: EXFO-IT046
     set_name: Extreme Force
@@ -110,6 +122,10 @@ sets:
     set_name: 2018 Mega-Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: MZMI-IT066
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   pt:
   - set_number: EXFO-PT046
     set_name: Extreme Force
@@ -123,6 +139,10 @@ sets:
     set_name: 2018 Mega-Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: MZMI-PT066
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   ja:
   - set_number: EXFO-JP046
     set_name: Extreme Force
