--- a/data/cards/22211622.yaml
+++ b/data/cards/22211622.yaml
@@ -80,6 +80,10 @@ sets:
     set_name: OTS Tournament Pack 23
     rarities:
     - Common
+  - set_number: MZMI-EN056
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   de:
   - set_number: MACR-DE018
     set_name: Maximum Crisis
@@ -89,6 +93,10 @@ sets:
     set_name: OTS Tournament Pack 23
     rarities:
     - Common
+  - set_number: MZMI-DE056
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   fr:
   - set_number: MACR-FR018
     set_name: Maximum Crisis
@@ -98,6 +106,10 @@ sets:
     set_name: OTS Tournament Pack 23
     rarities:
     - Common
+  - set_number: MZMI-FR056
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   it:
   - set_number: MACR-IT018
     set_name: Maximum Crisis
@@ -107,6 +119,10 @@ sets:
     set_name: OTS Tournament Pack 23
     rarities:
     - Common
+  - set_number: MZMI-IT056
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   pt:
   - set_number: MACR-PT018
     set_name: Maximum Crisis
@@ -116,6 +132,10 @@ sets:
     set_name: OTS Tournament Pack 23
     rarities:
     - Common
+  - set_number: MZMI-PT056
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   ja:
   - set_number: MACR-JP018
     set_name: Maximum Crisis
