--- a/data/cards/25853045.yaml
+++ b/data/cards/25853045.yaml
@@ -63,6 +63,10 @@ sets:
     set_name: 'Legendary Duelists: Duels From the Deep'
     rarities:
     - Common
+  - set_number: MZMI-EN054
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   de:
   - set_number: DUSA-DE008
     set_name: Duelist Saga
@@ -72,6 +76,10 @@ sets:
     set_name: 'Legendary Duelists: Duels From the Deep'
     rarities:
     - Common
+  - set_number: MZMI-DE054
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   fr:
   - set_number: DUSA-FR008
     set_name: Duelist Saga
@@ -81,6 +89,10 @@ sets:
     set_name: 'Legendary Duelists: Duels From the Deep'
     rarities:
     - Common
+  - set_number: MZMI-FR054
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   it:
   - set_number: DUSA-IT008
     set_name: Duelist Saga
@@ -90,6 +102,10 @@ sets:
     set_name: 'Legendary Duelists: Duels From the Deep'
     rarities:
     - Common
+  - set_number: MZMI-IT054
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   pt:
   - set_number: DUSA-PT008
     set_name: Duelist Saga
@@ -99,6 +115,10 @@ sets:
     set_name: 'Legendary Duelists: Duels From the Deep'
     rarities:
     - Common
+  - set_number: MZMI-PT054
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   ja:
   - set_number: DP15-JP019
     set_name: 'Duelist Pack: Kastle Siblings'
