--- a/data/cards/26372118.yaml
+++ b/data/cards/26372118.yaml
@@ -53,26 +53,46 @@ sets:
     set_name: Amazing Defenders
     rarities:
     - Ultra Rare
+  - set_number: MZMI-EN083
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   de:
   - set_number: AMDE-DE010
     set_name: Amazing Defenders
     rarities:
     - Ultra Rare
+  - set_number: MZMI-DE083
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   fr:
   - set_number: AMDE-FR010
     set_name: Amazing Defenders
     rarities:
     - Ultra Rare
+  - set_number: MZMI-FR083
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   it:
   - set_number: AMDE-IT010
     set_name: Amazing Defenders
     rarities:
     - Ultra Rare
+  - set_number: MZMI-IT083
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   pt:
   - set_number: AMDE-PT010
     set_name: Amazing Defenders
     rarities:
     - Ultra Rare
+  - set_number: MZMI-PT083
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   ja:
   - set_number: DBAD-JP010
     set_name: 'Deck Build Pack: Amazing Defenders'
