--- a/data/cards/27541563.yaml
+++ b/data/cards/27541563.yaml
@@ -56,6 +56,10 @@ sets:
     set_name: 2018 Mega-Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: MZMI-EN068
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   de:
   - set_number: CIBR-DE071
     set_name: Circuit Break
@@ -70,6 +74,10 @@ sets:
     set_name: 2018 Mega-Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: MZMI-DE068
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   fr:
   - set_number: CIBR-FR071
     set_name: Circuit Break
@@ -84,6 +92,10 @@ sets:
     set_name: 2018 Mega-Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: MZMI-FR068
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   it:
   - set_number: CIBR-IT071
     set_name: Circuit Break
@@ -98,6 +110,10 @@ sets:
     set_name: 2018 Mega-Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: MZMI-IT068
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   pt:
   - set_number: CIBR-PT071
     set_name: Circuit Break
@@ -112,6 +128,10 @@ sets:
     set_name: 2018 Mega-Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: MZMI-PT068
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   ja:
   - set_number: CIBR-JP071
     set_name: Circuit Break
