--- a/data/cards/31991800.yaml
+++ b/data/cards/31991800.yaml
@@ -69,6 +69,10 @@ sets:
     set_name: 2016 Mega-Tin Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: MZMI-EN072
+    set_name: Maze of Millennia
+    rarities:
+    - Super Rare
   de:
   - set_number: DOCS-DE026
     set_name: Dimension of Chaos
@@ -78,6 +82,10 @@ sets:
     set_name: 2016 Mega-Tin Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: MZMI-DE072
+    set_name: Maze of Millennia
+    rarities:
+    - Super Rare
   fr:
   - set_number: DOCS-FR026
     set_name: Dimension of Chaos
@@ -87,6 +95,10 @@ sets:
     set_name: 2016 Mega-Tin Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: MZMI-FR072
+    set_name: Maze of Millennia
+    rarities:
+    - Super Rare
   it:
   - set_number: DOCS-IT026
     set_name: Dimension of Chaos
@@ -96,6 +108,10 @@ sets:
     set_name: 2016 Mega-Tin Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: MZMI-IT072
+    set_name: Maze of Millennia
+    rarities:
+    - Super Rare
   pt:
   - set_number: DOCS-PT026
     set_name: Dimension of Chaos
@@ -105,6 +121,10 @@ sets:
     set_name: 2016 Mega-Tin Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: MZMI-PT072
+    set_name: Maze of Millennia
+    rarities:
+    - Super Rare
   ja:
   - set_number: DOCS-JP026
     set_name: Dimension of Chaos
