--- a/data/cards/35269904.yaml
+++ b/data/cards/35269904.yaml
@@ -49,6 +49,10 @@ sets:
     set_name: OTS Tournament Pack 22
     rarities:
     - Ultimate Rare
+  - set_number: MZMI-EN084
+    set_name: Maze of Millennia
+    rarities:
+    - Ultra Rare
   de:
   - set_number: PHHY-DE069
     set_name: Photon Hypernova
@@ -58,6 +62,10 @@ sets:
     set_name: OTS Tournament Pack 22
     rarities:
     - Ultimate Rare
+  - set_number: MZMI-DE084
+    set_name: Maze of Millennia
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: PHHY-FR069
     set_name: Photon Hypernova
@@ -67,6 +75,10 @@ sets:
     set_name: OTS Tournament Pack 22
     rarities:
     - Ultimate Rare
+  - set_number: MZMI-FR084
+    set_name: Maze of Millennia
+    rarities:
+    - Ultra Rare
   it:
   - set_number: PHHY-IT069
     set_name: Photon Hypernova
@@ -76,6 +88,10 @@ sets:
     set_name: OTS Tournament Pack 22
     rarities:
     - Ultimate Rare
+  - set_number: MZMI-IT084
+    set_name: Maze of Millennia
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: PHHY-PT069
     set_name: Photon Hypernova
@@ -85,6 +101,10 @@ sets:
     set_name: OTS Tournament Pack 22
     rarities:
     - Ultimate Rare
+  - set_number: MZMI-PT084
+    set_name: Maze of Millennia
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: PHHY-JP069
     set_name: Photon Hypernova
