--- a/data/cards/37495766.yaml
+++ b/data/cards/37495766.yaml
@@ -52,30 +52,50 @@ sets:
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: MZMI-EN077
+    set_name: Maze of Millennia
+    rarities:
+    - Super Rare
   de:
   - set_number: AMDE-DE007
     set_name: Amazing Defenders
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: MZMI-DE077
+    set_name: Maze of Millennia
+    rarities:
+    - Super Rare
   fr:
   - set_number: AMDE-FR007
     set_name: Amazing Defenders
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: MZMI-FR077
+    set_name: Maze of Millennia
+    rarities:
+    - Super Rare
   it:
   - set_number: AMDE-IT007
     set_name: Amazing Defenders
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: MZMI-IT077
+    set_name: Maze of Millennia
+    rarities:
+    - Super Rare
   pt:
   - set_number: AMDE-PT007
     set_name: Amazing Defenders
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: MZMI-PT077
+    set_name: Maze of Millennia
+    rarities:
+    - Super Rare
   ja:
   - set_number: DBAD-JP007
     set_name: 'Deck Build Pack: Amazing Defenders'
