--- a/data/cards/37617348.yaml
+++ b/data/cards/37617348.yaml
@@ -52,30 +52,50 @@ sets:
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: MZMI-EN076
+    set_name: Maze of Millennia
+    rarities:
+    - Super Rare
   de:
   - set_number: AMDE-DE004
     set_name: Amazing Defenders
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: MZMI-DE076
+    set_name: Maze of Millennia
+    rarities:
+    - Super Rare
   fr:
   - set_number: AMDE-FR004
     set_name: Amazing Defenders
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: MZMI-FR076
+    set_name: Maze of Millennia
+    rarities:
+    - Super Rare
   it:
   - set_number: AMDE-IT004
     set_name: Amazing Defenders
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: MZMI-IT076
+    set_name: Maze of Millennia
+    rarities:
+    - Super Rare
   pt:
   - set_number: AMDE-PT004
     set_name: Amazing Defenders
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: MZMI-PT076
+    set_name: Maze of Millennia
+    rarities:
+    - Super Rare
   ja:
   - set_number: DBAD-JP004
     set_name: 'Deck Build Pack: Amazing Defenders'
