--- a/data/cards/41044418.yaml
+++ b/data/cards/41044418.yaml
@@ -47,26 +47,46 @@ sets:
     set_name: 'Legendary Duelists: Rage of Ra'
     rarities:
     - Super Rare
+  - set_number: MZMI-EN070
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   de:
   - set_number: LED7-DE006
     set_name: 'Legendary Duelists: Rage of Ra'
     rarities:
     - Super Rare
+  - set_number: MZMI-DE070
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   fr:
   - set_number: LED7-FR006
     set_name: 'Legendary Duelists: Rage of Ra'
     rarities:
     - Super Rare
+  - set_number: MZMI-FR070
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   it:
   - set_number: LED7-IT006
     set_name: 'Legendary Duelists: Rage of Ra'
     rarities:
     - Super Rare
+  - set_number: MZMI-IT070
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   pt:
   - set_number: LED7-PT006
     set_name: 'Legendary Duelists: Rage of Ra'
     rarities:
     - Super Rare
+  - set_number: MZMI-PT070
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   ja:
   - set_number: DP24-JP006
     set_name: 'Duelist Pack: Duelists of Gloom'
