--- a/data/cards/42160203.yaml
+++ b/data/cards/42160203.yaml
@@ -69,6 +69,10 @@ sets:
     set_name: Legendary Dragon Decks
     rarities:
     - Common
+  - set_number: MZMI-EN060
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   de:
   - set_number: COTD-DE041
     set_name: Code of the Duelist
@@ -78,6 +82,10 @@ sets:
     set_name: Legendary Dragon Decks
     rarities:
     - Common
+  - set_number: MZMI-DE060
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   fr:
   - set_number: COTD-FR041
     set_name: Code of the Duelist
@@ -87,6 +95,10 @@ sets:
     set_name: Legendary Dragon Decks
     rarities:
     - Common
+  - set_number: MZMI-FR060
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   it:
   - set_number: COTD-IT041
     set_name: Code of the Duelist
@@ -96,6 +108,10 @@ sets:
     set_name: Legendary Dragon Decks
     rarities:
     - Common
+  - set_number: MZMI-IT060
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   pt:
   - set_number: COTD-PT041
     set_name: Code of the Duelist
@@ -105,6 +121,10 @@ sets:
     set_name: Legendary Dragon Decks
     rarities:
     - Common
+  - set_number: MZMI-PT060
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   ja:
   - set_number: COTD-JP041
     set_name: Code of the Duelist
