--- a/data/cards/49366157.yaml
+++ b/data/cards/49366157.yaml
@@ -47,26 +47,46 @@ sets:
     set_name: Dimension of Chaos
     rarities:
     - Super Rare
+  - set_number: MZMI-EN075
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   de:
   - set_number: DOCS-DE060
     set_name: Dimension of Chaos
     rarities:
     - Super Rare
+  - set_number: MZMI-DE075
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   fr:
   - set_number: DOCS-FR060
     set_name: Dimension of Chaos
     rarities:
     - Super Rare
+  - set_number: MZMI-FR075
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   it:
   - set_number: DOCS-IT060
     set_name: Dimension of Chaos
     rarities:
     - Super Rare
+  - set_number: MZMI-IT075
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   pt:
   - set_number: DOCS-PT060
     set_name: Dimension of Chaos
     rarities:
     - Super Rare
+  - set_number: MZMI-PT075
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   ja:
   - set_number: DOCS-JP060
     set_name: Dimension of Chaos
