--- a/data/cards/53143898.yaml
+++ b/data/cards/53143898.yaml
@@ -64,6 +64,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: MZMI-EN062
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   de:
   - set_number: CIBR-DE012
     set_name: Circuit Break
@@ -80,6 +84,10 @@ sets:
     - Ultra Rare
   - set_number: MGED-DE091
     set_name: 'Maximum Gold: El Dorado'
+    rarities:
+    - Rare
+  - set_number: MZMI-DE062
+    set_name: Maze of Millennia
     rarities:
     - Rare
   fr:
@@ -100,6 +108,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: MZMI-FR062
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   it:
   - set_number: CIBR-IT012
     set_name: Circuit Break
@@ -118,6 +130,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: MZMI-IT062
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   pt:
   - set_number: CIBR-PT012
     set_name: Circuit Break
@@ -134,6 +150,10 @@ sets:
     - Ultra Rare
   - set_number: MGED-PT091
     set_name: 'Maximum Gold: El Dorado'
+    rarities:
+    - Rare
+  - set_number: MZMI-PT062
+    set_name: Maze of Millennia
     rarities:
     - Rare
   ja:
