--- a/data/cards/61292243.yaml
+++ b/data/cards/61292243.yaml
@@ -59,6 +59,10 @@ sets:
     set_name: OTS Tournament Pack 23
     rarities:
     - Super Rare
+  - set_number: MZMI-EN081
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   de:
   - set_number: DUNE-DE058
     set_name: Duelist Nexus
@@ -68,6 +72,10 @@ sets:
     set_name: OTS Tournament Pack 23
     rarities:
     - Super Rare
+  - set_number: MZMI-DE081
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   fr:
   - set_number: DUNE-FR058
     set_name: Duelist Nexus
@@ -77,6 +85,10 @@ sets:
     set_name: OTS Tournament Pack 23
     rarities:
     - Super Rare
+  - set_number: MZMI-FR081
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   it:
   - set_number: DUNE-IT058
     set_name: Duelist Nexus
@@ -86,6 +98,10 @@ sets:
     set_name: OTS Tournament Pack 23
     rarities:
     - Super Rare
+  - set_number: MZMI-IT081
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   pt:
   - set_number: DUNE-PT058
     set_name: Duelist Nexus
@@ -95,6 +111,10 @@ sets:
     set_name: OTS Tournament Pack 23
     rarities:
     - Super Rare
+  - set_number: MZMI-PT081
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   ja:
   - set_number: DUNE-JP058
     set_name: Duelist Nexus
