--- a/data/cards/68395509.yaml
+++ b/data/cards/68395509.yaml
@@ -69,6 +69,10 @@ sets:
     set_name: 2016 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: MZMI-EN073
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   de:
   - set_number: DOCS-DE027
     set_name: Dimension of Chaos
@@ -78,6 +82,10 @@ sets:
     set_name: 2016 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: MZMI-DE073
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   fr:
   - set_number: DOCS-FR027
     set_name: Dimension of Chaos
@@ -87,6 +95,10 @@ sets:
     set_name: 2016 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: MZMI-FR073
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   it:
   - set_number: DOCS-IT027
     set_name: Dimension of Chaos
@@ -96,6 +108,10 @@ sets:
     set_name: 2016 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: MZMI-IT073
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   pt:
   - set_number: DOCS-PT027
     set_name: Dimension of Chaos
@@ -105,6 +121,10 @@ sets:
     set_name: 2016 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: MZMI-PT073
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   ja:
   - set_number: DOCS-JP027
     set_name: Dimension of Chaos
