--- a/data/cards/69610326.yaml
+++ b/data/cards/69610326.yaml
@@ -84,6 +84,10 @@ sets:
     set_name: OTS Tournament Pack 23
     rarities:
     - Common
+  - set_number: MZMI-EN057
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   de:
   - set_number: MACR-DE019
     set_name: Maximum Crisis
@@ -97,6 +101,10 @@ sets:
     set_name: OTS Tournament Pack 23
     rarities:
     - Common
+  - set_number: MZMI-DE057
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   fr:
   - set_number: MACR-FR019
     set_name: Maximum Crisis
@@ -110,6 +118,10 @@ sets:
     set_name: OTS Tournament Pack 23
     rarities:
     - Common
+  - set_number: MZMI-FR057
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   it:
   - set_number: MACR-IT019
     set_name: Maximum Crisis
@@ -123,6 +135,10 @@ sets:
     set_name: OTS Tournament Pack 23
     rarities:
     - Common
+  - set_number: MZMI-IT057
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   pt:
   - set_number: MACR-PT019
     set_name: Maximum Crisis
@@ -136,6 +152,10 @@ sets:
     set_name: OTS Tournament Pack 23
     rarities:
     - Common
+  - set_number: MZMI-PT057
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   ja:
   - set_number: MACR-JP019
     set_name: Maximum Crisis
