--- a/data/cards/70771599.yaml
+++ b/data/cards/70771599.yaml
@@ -70,6 +70,10 @@ sets:
     set_name: Legendary Dragon Decks
     rarities:
     - Common
+  - set_number: MZMI-EN059
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   de:
   - set_number: COTD-DE039
     set_name: Code of the Duelist
@@ -79,6 +83,10 @@ sets:
     set_name: Legendary Dragon Decks
     rarities:
     - Common
+  - set_number: MZMI-DE059
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   fr:
   - set_number: COTD-FR039
     set_name: Code of the Duelist
@@ -88,6 +96,10 @@ sets:
     set_name: Legendary Dragon Decks
     rarities:
     - Common
+  - set_number: MZMI-FR059
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   it:
   - set_number: COTD-IT039
     set_name: Code of the Duelist
@@ -97,6 +109,10 @@ sets:
     set_name: Legendary Dragon Decks
     rarities:
     - Common
+  - set_number: MZMI-IT059
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   pt:
   - set_number: COTD-PT039
     set_name: Code of the Duelist
@@ -106,6 +122,10 @@ sets:
     set_name: Legendary Dragon Decks
     rarities:
     - Common
+  - set_number: MZMI-PT059
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   ja:
   - set_number: COTD-JP039
     set_name: Code of the Duelist
