--- a/data/cards/77432167.yaml
+++ b/data/cards/77432167.yaml
@@ -47,26 +47,46 @@ sets:
     set_name: 'Legendary Duelists: Rage of Ra'
     rarities:
     - Super Rare
+  - set_number: MZMI-EN071
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   de:
   - set_number: LED7-DE007
     set_name: 'Legendary Duelists: Rage of Ra'
     rarities:
     - Super Rare
+  - set_number: MZMI-DE071
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   fr:
   - set_number: LED7-FR007
     set_name: 'Legendary Duelists: Rage of Ra'
     rarities:
     - Super Rare
+  - set_number: MZMI-FR071
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   it:
   - set_number: LED7-IT007
     set_name: 'Legendary Duelists: Rage of Ra'
     rarities:
     - Super Rare
+  - set_number: MZMI-IT071
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   pt:
   - set_number: LED7-PT007
     set_name: 'Legendary Duelists: Rage of Ra'
     rarities:
     - Super Rare
+  - set_number: MZMI-PT071
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   ja:
   - set_number: DP24-JP007
     set_name: 'Duelist Pack: Duelists of Gloom'
