--- a/data/cards/78665705.yaml
+++ b/data/cards/78665705.yaml
@@ -47,26 +47,51 @@ sets:
     set_name: 'Legendary Duelists: Rage of Ra'
     rarities:
     - Ultra Rare
+  - set_number: MZMI-EN069
+    set_name: Maze of Millennia
+    rarities:
+    - Ultra Rare
+    - Collector's Rare
   de:
   - set_number: LED7-DE004
     set_name: 'Legendary Duelists: Rage of Ra'
     rarities:
     - Ultra Rare
+  - set_number: MZMI-DE069
+    set_name: Maze of Millennia
+    rarities:
+    - Ultra Rare
+    - Collector's Rare
   fr:
   - set_number: LED7-FR004
     set_name: 'Legendary Duelists: Rage of Ra'
     rarities:
     - Ultra Rare
+  - set_number: MZMI-FR069
+    set_name: Maze of Millennia
+    rarities:
+    - Ultra Rare
+    - Collector's Rare
   it:
   - set_number: LED7-IT004
     set_name: 'Legendary Duelists: Rage of Ra'
     rarities:
     - Ultra Rare
+  - set_number: MZMI-IT069
+    set_name: Maze of Millennia
+    rarities:
+    - Ultra Rare
+    - Collector's Rare
   pt:
   - set_number: LED7-PT004
     set_name: 'Legendary Duelists: Rage of Ra'
     rarities:
     - Ultra Rare
+  - set_number: MZMI-PT069
+    set_name: Maze of Millennia
+    rarities:
+    - Ultra Rare
+    - Collector's Rare
   ja:
   - set_number: DP24-JP004
     set_name: 'Duelist Pack: Duelists of Gloom'
