--- a/data/cards/93503294.yaml
+++ b/data/cards/93503294.yaml
@@ -73,6 +73,10 @@ sets:
     set_name: 2018 Mega-Tin Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: MZMI-EN067
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   de:
   - set_number: CIBR-DE047
     set_name: Circuit Break
@@ -87,6 +91,10 @@ sets:
     set_name: 2018 Mega-Tin Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: MZMI-DE067
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   fr:
   - set_number: CIBR-FR047
     set_name: Circuit Break
@@ -101,6 +109,10 @@ sets:
     set_name: 2018 Mega-Tin Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: MZMI-FR067
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   it:
   - set_number: CIBR-IT047
     set_name: Circuit Break
@@ -115,6 +127,10 @@ sets:
     set_name: 2018 Mega-Tin Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: MZMI-IT067
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   pt:
   - set_number: CIBR-PT047
     set_name: Circuit Break
@@ -129,6 +145,10 @@ sets:
     set_name: 2018 Mega-Tin Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: MZMI-PT067
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   ja:
   - set_number: CIBR-JP047
     set_name: Circuit Break
