--- a/data/cards/95453143.yaml
+++ b/data/cards/95453143.yaml
@@ -64,6 +64,10 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Super Rare
+  - set_number: MZMI-EN051
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   - set_number: JUMP-EN039
     set_name: Shonen Jump Vol. 8, Issue 5 promotional card
     rarities:
@@ -77,6 +81,10 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Super Rare
+  - set_number: MZMI-DE051
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   fr:
   - set_number: DPC5-FR003
     set_name: Duelist Pack Collection Tin 2011
@@ -86,6 +94,10 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Super Rare
+  - set_number: MZMI-FR051
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   it:
   - set_number: DPC5-IT003
     set_name: Duelist Pack Collection Tin 2011
@@ -95,11 +107,19 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Super Rare
+  - set_number: MZMI-IT051
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   pt:
   - set_number: LC5D-PT154
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Super Rare
+  - set_number: MZMI-PT051
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   ja:
   - set_number: WJMP-JP013
     set_name: Weekly Shōnen Jump 2009, Issue 36 promotional card
