--- a/data/cards/96227613.yaml
+++ b/data/cards/96227613.yaml
@@ -80,6 +80,10 @@ sets:
     set_name: OTS Tournament Pack 23
     rarities:
     - Common
+  - set_number: MZMI-EN055
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   de:
   - set_number: MACR-DE017
     set_name: Maximum Crisis
@@ -89,6 +93,10 @@ sets:
     set_name: OTS Tournament Pack 23
     rarities:
     - Common
+  - set_number: MZMI-DE055
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   fr:
   - set_number: MACR-FR017
     set_name: Maximum Crisis
@@ -98,6 +106,10 @@ sets:
     set_name: OTS Tournament Pack 23
     rarities:
     - Common
+  - set_number: MZMI-FR055
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   it:
   - set_number: MACR-IT017
     set_name: Maximum Crisis
@@ -107,6 +119,10 @@ sets:
     set_name: OTS Tournament Pack 23
     rarities:
     - Common
+  - set_number: MZMI-IT055
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   pt:
   - set_number: MACR-PT017
     set_name: Maximum Crisis
@@ -116,6 +132,10 @@ sets:
     set_name: OTS Tournament Pack 23
     rarities:
     - Common
+  - set_number: MZMI-PT055
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   ja:
   - set_number: MACR-JP017
     set_name: Maximum Crisis
