--- a/data/cards/96733134.yaml
+++ b/data/cards/96733134.yaml
@@ -81,6 +81,10 @@ sets:
     set_name: Legendary Dragon Decks
     rarities:
     - Common
+  - set_number: MZMI-EN058
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   de:
   - set_number: COTD-DE015
     set_name: Code of the Duelist
@@ -90,6 +94,10 @@ sets:
     set_name: Legendary Dragon Decks
     rarities:
     - Common
+  - set_number: MZMI-DE058
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   fr:
   - set_number: COTD-FR015
     set_name: Code of the Duelist
@@ -99,6 +107,10 @@ sets:
     set_name: Legendary Dragon Decks
     rarities:
     - Common
+  - set_number: MZMI-FR058
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   it:
   - set_number: COTD-IT015
     set_name: Code of the Duelist
@@ -108,6 +120,10 @@ sets:
     set_name: Legendary Dragon Decks
     rarities:
     - Common
+  - set_number: MZMI-IT058
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   pt:
   - set_number: COTD-PT015
     set_name: Code of the Duelist
@@ -117,6 +133,10 @@ sets:
     set_name: Legendary Dragon Decks
     rarities:
     - Common
+  - set_number: MZMI-PT058
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   ja:
   - set_number: COTD-JP015
     set_name: Code of the Duelist
