--- a/data/cards/99469936.yaml
+++ b/data/cards/99469936.yaml
@@ -59,26 +59,46 @@ sets:
     set_name: Duelist Saga
     rarities:
     - Ultra Rare
+  - set_number: MZMI-EN053
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   de:
   - set_number: DUSA-DE007
     set_name: Duelist Saga
     rarities:
     - Ultra Rare
+  - set_number: MZMI-DE053
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   fr:
   - set_number: DUSA-FR007
     set_name: Duelist Saga
     rarities:
     - Ultra Rare
+  - set_number: MZMI-FR053
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   it:
   - set_number: DUSA-IT007
     set_name: Duelist Saga
     rarities:
     - Ultra Rare
+  - set_number: MZMI-IT053
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   pt:
   - set_number: DUSA-PT007
     set_name: Duelist Saga
     rarities:
     - Ultra Rare
+  - set_number: MZMI-PT053
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   ja:
   - set_number: DP15-JP018
     set_name: 'Duelist Pack: Kastle Siblings'
