--- a/data/cards/99984170.yaml
+++ b/data/cards/99984170.yaml
@@ -53,26 +53,46 @@ sets:
     set_name: Amazing Defenders
     rarities:
     - Ultra Rare
+  - set_number: MZMI-EN078
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   de:
   - set_number: AMDE-DE009
     set_name: Amazing Defenders
     rarities:
     - Ultra Rare
+  - set_number: MZMI-DE078
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   fr:
   - set_number: AMDE-FR009
     set_name: Amazing Defenders
     rarities:
     - Ultra Rare
+  - set_number: MZMI-FR078
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   it:
   - set_number: AMDE-IT009
     set_name: Amazing Defenders
     rarities:
     - Ultra Rare
+  - set_number: MZMI-IT078
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   pt:
   - set_number: AMDE-PT009
     set_name: Amazing Defenders
     rarities:
     - Ultra Rare
+  - set_number: MZMI-PT078
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   ja:
   - set_number: DBAD-JP009
     set_name: 'Deck Build Pack: Amazing Defenders'
