--- a/data/series/map.yaml
+++ b/data/series/map.yaml
@@ -2770,6 +2770,18 @@ Synchro Dragon:
   ko_rr: Singkeuro Deuraegon
   zh-TW:
   zh-CN:
+Raika:
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>蕾禍<rt>ライカ</rt></ruby>
+  ja_romaji: Raika
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
 Rainbow Bridge:
   de: Regenbogenbrücke
   es: Puente de Arco Iris
