--- a/data/cards/yugipedia1037784.yaml
+++ b/data/cards/yugipedia1037784.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Target cards you control up to the number of your "Sinful Spoils" cards that are banished and/or in your GY, and/or cards your opponent controls up to the number of their "Sinful Spoils" cards that are banished and/or in their GY; destroy them. If this Set card is destroyed, or banished, by an opponent's activated effect: You can shuffle up to 2 cards on the field into the Deck. You can only activate 1 "Battle of the Sinful Spoils" per turn.
+    Target cards you control up to the number of your "Sinful Spoils" cards that are banished and/or in your GY, and/or cards your opponent controls up to the number of their "Sinful Spoils" cards that are banished and/or in their GY; destroy them. If this Set card in its owner's control is destroyed, or banished, by an opponent's activated effect: You can shuffle up to 2 cards on the field into the Deck. You can only activate 1 "Battle of the Sinful Spoils" per turn.
   de:
   es:
   fr:
