--- a/data/cards/yugipedia1037786.yaml
+++ b/data/cards/yugipedia1037786.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Target 1 Xyz Monster you control; Special Summon 1 "Goblin" Xyz Monster from your Extra Deck, by using that monster you control as material, and if you do, attach this card to it as additional material. (This is treated as an Xyz Summon.) You can banish this card from your GY, then target 1 "Goblin" Xyz Monster you control and 1 card in either GY; attach the second target to the first target as material. You can only use each effect of "Goblin Biker Pile-Up" once per turn.
+    Target 1 Xyz Monster you control; Special Summon 1 "Goblin" Xyz Monster from your Extra Deck, by using that monster you control as material, and if you do, attach this card to it as additional material. (This is treated as an Xyz Summon. Transfer its materials to the Summoned monster.) You can banish this card from your GY, then target 1 "Goblin" Xyz Monster you control and 1 card in either GY; attach that card from the GY to that monster on the field as material. You can only use each effect of "Goblin Biker Pile-Up" once per turn.
   de:
   es:
   fr:
