--- a/data/cards/47873397.yaml
+++ b/data/cards/47873397.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 图腾柱
 text:
   en: |-
-    Your opponent cannot target Rock monsters you control with 0 original ATK, with card effects. Once per battle, when an opponent's monster declares an attack: You can negate that attack, and if you do, place 1 counter on this card. If this card has 3 counters, send it to the GY. If you have 3 or more Rock monsters in your GY with 0 ATK and different names: You can banish this card from your GY; any effect damage your opponent takes this turn is doubled.
+    Your opponent cannot target Rock monsters you control with 0 original ATK, with card effects. Once per battle, when an opponent's monster declares an attack: You can negate that attack, and if you do, place 1 counter on this card. If this card has 3 counters, send it to the GY. If you have 3 or more Rock monsters in your GY with 0 ATK and different names from each other: You can banish this card from your GY; any effect damage your opponent takes this turn is doubled.
   de:
   es:
   fr:
