--- a/data/cards/59712426.yaml
+++ b/data/cards/59712426.yaml
@@ -17,7 +17,7 @@ text:
   en: |-
     You can discard this card; add 1 "Light Barrier" from your Deck or GY to your hand. If this card is Summoned: Toss a coin and this card gains the appropriate effect.
     ● Heads: When an attack is declared involving this card: You can target 1 monster on the field; destroy it, and if you do, inflict 500 damage to its controller.
-    ● Tails: When an attack is declared involving this card: Destroy all monsters on the field.
+    ● Tails: If an attack is declared involving this card: Destroy all monsters on the field.
   de:
   es:
   fr:
