--- a/rush.yaml
+++ b/rush.yaml
@@ -130107,3 +130107,180 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1037157
+---
+konami_id:
+name:
+  en: Praime Call
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: プライム・コール
+  ja_romaji: Puraimu Kōru
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    The only monsters in your Graveyard are LIGHT Attribute.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Add 1 monster from your Graveyard to your hand. Then, you can add 1 "Fusion" from your Graveyard to your hand. If you do, you can only activate the monster effects of "Praime Dwarf" until the end of this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+series:
+- Praime
+images:
+- index: 1
+  image: PraimeCall-RDKP16-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP16-JP048
+    set_name: Transamu of Transcendence
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1037802
+---
+konami_id:
+name:
+  en: Animagica Witch
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: アニマジカ・ウィッチ
+  ja_romaji: Animajika Witchi
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Reveal up to 2 Level 7 or 8 LIGHT Attribute Effect Monsters in your hand to your opponent.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Draw cards equal to [the number of monsters revealed to meet the requirement]. Then, shuffle cards from your hand into the Deck equal to [the number of cards drawn by this effect].
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Beast / Effect
+attribute: LIGHT
+level: 3
+atk: 1000
+def: 200
+images:
+- index: 1
+  image: AnimagicaWitch-RDKP16-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP16-JP031
+    set_name: Transamu of Transcendence
+    rarities:
+    - Super Rare
+    - Secret Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1037804
+---
+konami_id:
+name:
+  en: The Secret of Manifestation
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>顕<rt>けん</rt></ruby><ruby>現<rt>げん</rt></ruby>の<ruby>秘<rt>ひ</rt></ruby><ruby>儀<rt>ぎ</rt></ruby>
+  ja_romaji: Kengen no Higi
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send up to 2 monsters from your hand and/or field to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Draw 1 card. Then, you can Special Summon 1 Level 5 or higher LIGHT Attribute Spellcaster Type monster from your Graveyard face-up to your field. If you do, you can only activate the monster effects of LIGHT Attribute Spellcaster Type monsters until the end of this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+images:
+- index: 1
+  image: TheSecretofManifestation-RDKP16-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP16-JP051
+    set_name: Transamu of Transcendence
+    rarities:
+    - Ultra Rare
+    - Secret Rare
+    - Over Rush Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1037806
