--- a/data/cards/yugipedia1037587.yaml
+++ b/data/cards/yugipedia1037587.yaml
@@ -33,6 +33,7 @@ link_arrows:
 - ↙
 - ↘
 atk: 1600
+materials: 2 monsters, including an Insect, Plant, or Reptile monster
 series:
 - Raika
 images:
