--- a/data/cards/yugipedia1037591.yaml
+++ b/data/cards/yugipedia1037591.yaml
@@ -34,6 +34,7 @@ link_arrows:
 - ⬇
 - ↘
 atk: 2300
+materials: 2+ monsters, including an Insect, Plant, or Reptile monster
 series:
 - Raika
 images:
