--- a/data/cards/yugipedia1037600.yaml
+++ b/data/cards/yugipedia1037600.yaml
@@ -36,6 +36,7 @@ link_arrows:
 - ↘
 - ➡
 atk: 3300
+materials: 2+ monsters, including an Insect, Plant, or Reptile monster
 series:
 - Raika
 images:
