--- a/data/rush/18595.yaml
+++ b/data/rush/18595.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You Normal Summoned this card this turn and the only monsters in your Graveyard are High Dragon Type and/or Dragon Type monsters.
+    You Normal Summoned this card this turn and the only monsters in your Graveyard are High Dragon Type and/or Dragon Type.
   de:
   es:
   fr:
