--- a/data/rush/yugipedia1037802.yaml
+++ b/data/rush/yugipedia1037802.yaml
@@ -26,7 +26,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 monster from your Graveyard to your hand. Then, you can add 1 "Fusion" from your Graveyard to your hand. If you do, you can only activate the monster effects of "Praime Dwarf" until the end of this turn.
+    Add 1 monster from your Graveyard to your hand. Then, you can add 1 "Fusion" from your Graveyard to your hand. You can only activate the monster effects of "Praime Dwarf" until the end of this turn.
   de:
   es:
   fr:
