--- a/data/rush/yugipedia1037806.yaml
+++ b/data/rush/yugipedia1037806.yaml
@@ -26,7 +26,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card. Then, you can Special Summon 1 Level 5 or higher LIGHT Attribute Spellcaster Type monster from your Graveyard face-up to your field. If you do, you can only activate the monster effects of LIGHT Attribute Spellcaster Type monsters until the end of this turn.
+    Draw 1 card. Then, you can Special Summon 1 Level 5 or higher LIGHT Attribute Spellcaster Type monster from your Graveyard face-up to your field. You can only activate the monster effects of LIGHT Attribute Spellcaster Type monsters until the end of this turn.
   de:
   es:
   fr:
