--- a/rush.yaml
+++ b/rush.yaml
@@ -44976,7 +44976,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If the only monsters in your Graveyard are High Dragon Type and/or Dragon Type monsters, send the top card of your Deck to the Graveyard.
+    If the only monsters in your Graveyard are High Dragon Type and/or Dragon Type, send the top card of your Deck to the Graveyard.
   de:
   es:
   fr:
@@ -89513,7 +89513,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If the only monsters in your Graveyard are Omega Psychic Type and/or Psychic Type monsters, send 1 card from your hand to the Graveyard.
+    If the only monsters in your Graveyard are Omega Psychic Type and/or Psychic Type, send 1 card from your hand to the Graveyard.
   de:
   es:
   fr:
@@ -92366,7 +92366,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If the only monsters in your Graveyard are High Dragon Type and/or Dragon Type monsters, send 1 card from your hand to the Graveyard.
+    If the only monsters in your Graveyard are High Dragon Type and/or Dragon Type, send 1 card from your hand to the Graveyard.
   de:
   es:
   fr:
@@ -92437,7 +92437,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You Normal Summoned this card this turn and the only monsters in your Graveyard are High Dragon Type and/or Dragon Type monsters.
+    You Normal Summoned this card this turn and the only monsters in your Graveyard are High Dragon Type and/or Dragon Type.
   de:
   es:
   fr:
@@ -94041,7 +94041,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If the only monsters in your Graveyard are High Dragon Type and/or Dragon Type monsters, pay 500 LP.
+    If the only monsters in your Graveyard are High Dragon Type and/or Dragon Type, pay 500 LP.
   de:
   es:
   fr:
@@ -118332,7 +118332,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If the only monsters in your Graveyard are High Dragon Type and/or Dragon Type monsters, send 1 monster from your hand to the Graveyard.
+    If the only monsters in your Graveyard are High Dragon Type and/or Dragon Type, send 1 monster from your hand to the Graveyard.
   de:
   es:
   fr:
@@ -118395,7 +118395,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If the only monsters in your Graveyard are High Dragon Type and/or Dragon Type monsters, send the top 3 cards of your Deck to the Graveyard.
+    If the only monsters in your Graveyard are High Dragon Type and/or Dragon Type, send the top 3 cards of your Deck to the Graveyard.
   de:
   es:
   fr:
@@ -130136,7 +130136,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 monster from your Graveyard to your hand. Then, you can add 1 "Fusion" from your Graveyard to your hand. If you do, you can only activate the monster effects of "Praime Dwarf" until the end of this turn.
+    Add 1 monster from your Graveyard to your hand. Then, you can add 1 "Fusion" from your Graveyard to your hand. You can only activate the monster effects of "Praime Dwarf" until the end of this turn.
   de:
   es:
   fr:
@@ -130255,7 +130255,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card. Then, you can Special Summon 1 Level 5 or higher LIGHT Attribute Spellcaster Type monster from your Graveyard face-up to your field. If you do, you can only activate the monster effects of LIGHT Attribute Spellcaster Type monsters until the end of this turn.
+    Draw 1 card. Then, you can Special Summon 1 Level 5 or higher LIGHT Attribute Spellcaster Type monster from your Graveyard face-up to your field. You can only activate the monster effects of LIGHT Attribute Spellcaster Type monsters until the end of this turn.
   de:
   es:
   fr:
@@ -130284,3 +130284,112 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1037806
+---
+konami_id:
+name:
+  en: Kanan the Swordmistress
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en: |-
+    A lady warrior armed with sword and shield, she floats lightly and stings sharply.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    チョウのように舞いハチのように刺す、剣と盾を手にした女戦士。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Warrior / Normal
+attribute: EARTH
+level: 4
+atk: 1400
+def: 1400
+images:
+- index: 1
+  image: KanantheSwordmistress-RD????-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/????-JP001
+    set_name: Rush Duel The Legend of Duelist Promotion Pack
+    rarities:
+    - Normal Parallel Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1037854
+---
+konami_id:
+name:
+  en: Excite Ground Dragon
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: エキサイト・グランド・ドラゴン
+  ja_romaji: Ekisaito Gurando Doragon
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    TBA
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Dragon / Effect
+attribute: EARTH
+level: 6
+atk: 1900
+def: 1900
+images:
+- index: 1
+  image: ExciteGroundDragon-RD????-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/????-JP002
+    set_name: Rush Duel The Legend of Duelist Promotion Pack
+    rarities:
+    - Normal Parallel Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1037856
