--- a/data/cards/24207889.yaml
+++ b/data/cards/24207889.yaml
@@ -224,7 +224,7 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg: Unlimited
-  ocg: Unlimited
+  tcg: Limited
+  ocg: Semi-Limited
 yugipedia_page_id: 532132
 master_duel_rarity: UR
