--- a/data/cards/37520316.yaml
+++ b/data/cards/37520316.yaml
@@ -280,7 +280,7 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Limited
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 119
 master_duel_rarity: UR
