--- a/data/cards/68304193.yaml
+++ b/data/cards/68304193.yaml
@@ -121,7 +121,7 @@ sets:
     rarities:
     - Rare
 limit_regulation:
-  tcg: Semi-Limited
+  tcg: Unlimited
   ocg: Limited
 yugipedia_page_id: 715519
 master_duel_rarity: UR
