--- a/data/cards/90846359.yaml
+++ b/data/cards/90846359.yaml
@@ -196,7 +196,7 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg: Unlimited
-  ocg: Semi-Limited
+  tcg: Limited
+  ocg: Limited
 yugipedia_page_id: 12523
 master_duel_rarity: SR
