--- a/data/cards/99177923.yaml
+++ b/data/cards/99177923.yaml
@@ -149,7 +149,7 @@ sets:
     - Secret Rare
     - Collector's Rare
 limit_regulation:
-  tcg: Limited
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 59301
 master_duel_rarity: UR
