--- a/data/cards/13035077.yaml
+++ b/data/cards/13035077.yaml
@@ -117,6 +117,6 @@ sets:
     - Common
 limit_regulation:
   tcg: Limited
-  ocg: Semi-Limited
+  ocg: Unlimited
 yugipedia_page_id: 405314
 master_duel_rarity: SR
