--- a/data/cards/15443125.yaml
+++ b/data/cards/15443125.yaml
@@ -83,7 +83,7 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg: Semi-Limited
+  tcg: Unlimited
   ocg: Limited
 yugipedia_page_id: 716821
 master_duel_rarity: UR
