--- a/data/cards/21347668.yaml
+++ b/data/cards/21347668.yaml
@@ -101,7 +101,7 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg: Unlimited
+  tcg: Semi-Limited
   ocg: Limited
 yugipedia_page_id: 716336
 master_duel_rarity: UR
