--- a/data/cards/25926710.yaml
+++ b/data/cards/25926710.yaml
@@ -84,7 +84,7 @@ sets:
     - Super Rare
     - Secret Rare
 limit_regulation:
-  tcg: Limited
+  tcg: Forbidden
   ocg: Forbidden
 yugipedia_page_id: 715522
 master_duel_rarity: UR
