--- a/data/cards/28126717.yaml
+++ b/data/cards/28126717.yaml
@@ -104,6 +104,6 @@ sets:
     - Super Rare
 limit_regulation:
   tcg: Unlimited
-  ocg: Semi-Limited
+  ocg: Unlimited
 yugipedia_page_id: 714985
 master_duel_rarity: R
