--- a/data/cards/35261759.yaml
+++ b/data/cards/35261759.yaml
@@ -329,7 +329,7 @@ sets:
     - Extra Secret Rare
     - Quarter Century Secret Rare
 limit_regulation:
-  tcg: Semi-Limited
+  tcg: Unlimited
   ocg: Semi-Limited
 yugipedia_page_id: 380782
 master_duel_rarity: SR
