--- a/data/cards/36521307.yaml
+++ b/data/cards/36521307.yaml
@@ -87,7 +87,7 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Limited
+  tcg: Forbidden
   ocg: Limited
 yugipedia_page_id: 715833
 master_duel_rarity: UR
