--- a/data/cards/41165831.yaml
+++ b/data/cards/41165831.yaml
@@ -89,6 +89,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg: Unlimited
+  tcg: Limited
   ocg: Unlimited
 yugipedia_page_id: 806086
