--- a/data/cards/45986603.yaml
+++ b/data/cards/45986603.yaml
@@ -296,7 +296,7 @@ sets:
     rarities:
     - Rare
 limit_regulation:
-  tcg: Forbidden
+  tcg: Limited
   ocg: Forbidden
 yugipedia_page_id: 1099
 master_duel_rarity: UR
