--- a/data/cards/56700100.yaml
+++ b/data/cards/56700100.yaml
@@ -90,6 +90,6 @@ sets:
     - Collector's Rare
 limit_regulation:
   tcg: Unlimited
-  ocg: Unlimited
+  ocg: Semi-Limited
 yugipedia_page_id: 715969
 master_duel_rarity: UR
