--- a/data/cards/62242678.yaml
+++ b/data/cards/62242678.yaml
@@ -182,6 +182,6 @@ sets:
     - Secret Rare
 limit_regulation:
   tcg: Unlimited
-  ocg: Unlimited
+  ocg: Forbidden
 yugipedia_page_id: 351384
 master_duel_rarity: UR
