--- a/data/cards/62320425.yaml
+++ b/data/cards/62320425.yaml
@@ -84,7 +84,7 @@ sets:
     - Super Rare
     - Secret Rare
 limit_regulation:
-  tcg: Limited
+  tcg: Forbidden
   ocg: Forbidden
 yugipedia_page_id: 712541
 master_duel_rarity: SR
