--- a/data/cards/63166095.yaml
+++ b/data/cards/63166095.yaml
@@ -207,6 +207,6 @@ sets:
     - Extra Secret Rare
 limit_regulation:
   tcg: Semi-Limited
-  ocg: Semi-Limited
+  ocg: Unlimited
 yugipedia_page_id: 552508
 master_duel_rarity: UR
