--- a/data/cards/65734501.yaml
+++ b/data/cards/65734501.yaml
@@ -90,7 +90,7 @@ sets:
     - Common
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Limited
   ocg: Semi-Limited
 yugipedia_page_id: 716431
 master_duel_rarity: SR
