--- a/data/cards/71525232.yaml
+++ b/data/cards/71525232.yaml
@@ -140,6 +140,6 @@ sets:
     - Secret Rare
 limit_regulation:
   tcg: Unlimited
-  ocg: Forbidden
+  ocg: Unlimited
 yugipedia_page_id: 372853
 master_duel_rarity: UR
