--- a/data/cards/82385847.yaml
+++ b/data/cards/82385847.yaml
@@ -204,7 +204,7 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg: Limited
+  tcg: Semi-Limited
   ocg: Limited
 yugipedia_page_id: 566145
 master_duel_rarity: UR
