--- a/data/cards/87209160.yaml
+++ b/data/cards/87209160.yaml
@@ -108,6 +108,6 @@ sets:
     - Common
 limit_regulation:
   tcg: Unlimited
-  ocg: Semi-Limited
+  ocg: Unlimited
 yugipedia_page_id: 717226
 master_duel_rarity: R
