--- a/data/cards/90411554.yaml
+++ b/data/cards/90411554.yaml
@@ -126,7 +126,7 @@ sets:
     - Super Rare
     - Secret Rare
 limit_regulation:
-  tcg: Forbidden
-  ocg: Forbidden
+  tcg: Limited
+  ocg: Limited
 yugipedia_page_id: 273115
 master_duel_rarity: UR
