--- a/data/cards/92714517.yaml
+++ b/data/cards/92714517.yaml
@@ -109,6 +109,6 @@ sets:
     - Super Rare
 limit_regulation:
   tcg: Unlimited
-  ocg: Unlimited
+  ocg: Semi-Limited
 yugipedia_page_id: 713725
 master_duel_rarity: UR
