--- a/data/cards/93896655.yaml
+++ b/data/cards/93896655.yaml
@@ -95,7 +95,7 @@ sets:
     rarities:
     - Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Limited
   ocg: Unlimited
 yugipedia_page_id: 708202
 master_duel_rarity: R
