--- a/data/cards/94677445.yaml
+++ b/data/cards/94677445.yaml
@@ -114,7 +114,7 @@ sets:
     - Secret Rare
     - Prismatic Secret Rare
 limit_regulation:
-  tcg: Forbidden
-  ocg: Forbidden
+  tcg: Limited
+  ocg: Limited
 yugipedia_page_id: 585355
 master_duel_rarity: SR
