--- a/data/cards/yugipedia1037852.yaml
+++ b/data/cards/yugipedia1037852.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    TBA
+    Shuffle your Deck, then excavate the top card of your Deck, and if it is a monster that can be Normal Summoned/Set, Special Summon it. If it wasn't a monster that can be Normal Summoned/Set, or couldn't be Special Summoned, place it on either the top or bottom of the Deck. You can only activate 1 "Time Dimension Hole" per turn.
   de:
   es:
   fr:
@@ -31,10 +31,10 @@ series:
 - Hole
 images:
 - index: 1
-  image: TimeDimensionHole-????-JP-OP.png
+  image: TimeDimensionHole-TDPR-JP-OP.png
 sets:
   ja:
-  - set_number: ????-JP005
+  - set_number: TDPR-JP005
     set_name: The Legend of Duelist Promotion Pack
     rarities:
     - Normal Parallel Rare
