--- a/data/cards/yugipedia1037901.yaml
+++ b/data/cards/yugipedia1037901.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Take 1 Level 5 or higher Illusion monster from your Deck, and either add it to your hand or Special Summon it. If Summoned this way, it cannot activate its effects during the Main Phase this turn. You can banish this card from your GY, then target 1 face-down card you control; return it to the hand, then you can Set 1 Spell/Trap from your hand. You can only use each effect of "Sinful Spoils Cycle" once per turn.
+    Take 1 Level 5 or higher Illusion monster from your Deck, and either add it to your hand or Special Summon it. If Summoned this way, you cannot activate its effects during the Main Phase this turn. You can banish this card from your GY, then target 1 face-down card you control; return it to the hand, then you can Set 1 Spell/Trap from your hand. You can only use each effect of "Sinful Spoils Cycle" once per turn.
   de:
   es:
   fr:
