--- a/data/cards/yugipedia1037902.yaml
+++ b/data/cards/yugipedia1037902.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Target 1 face-up Special Summoned monster; change it to face-down Defense Position. If you control a Level 5 or higher Illusion monster and this card is in your GY: You can Set this card, but banish it when it leaves the field. You can only use 1 effect of "Sinful Spoils of Dozing - Morrighan" per turn, and only once that turn.
+    Target 1 face-up Special Summoned monster on the field; change it to face-down Defense Position. If you control a Level 5 or higher Illusion monster and this card is in your GY: You can Set this card, but banish it when it leaves the field. You can only use 1 "Sinful Spoils of Dozing - Morrighan" effect per turn, and only once that turn.
   de:
   es:
   fr:
