--- a/data/cards/yugipedia1037900.yaml
+++ b/data/cards/yugipedia1037900.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If there is a “Sinful Spoils” card in either GY, you can Special Summon this card (from your hand). You can only Special Summon "Diabellze of the Original Sin" once per turn this way. Your opponent cannot activate Spell/Trap Cards that were not Set. If a Spell(s)/Trap(s) is Set to the field while this monster is on the field: You can target 1 card you control and 1 card your opponent controls; destroy them. You can only use this effect of "Diabellze of the Original Sin" once per turn.
+    If a "Sinful Spoils" card is in either GY, you can Special Summon this card (from your hand). You can only Special Summon "Diabellze of the Original Sin" once per turn this way. Your opponent cannot activate Spell/Trap Cards that were not Set. If either player Sets a Spell/Trap(s) to the field while this monster is on the field: You can target 1 card you control and 1 card your opponent controls; destroy them. You can only use this effect of "Diabellze of the Original Sin" once per turn.
   de:
   es:
   fr:
@@ -40,6 +40,14 @@ sets:
     set_name: Legacy of Destruction
     rarities:
     - Ultra Rare
+    - Ultimate Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
+  - set_number: LEDE-JP012
+    set_name: Legacy of Destruction +1 Bonus Pack
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
