--- a/data/rush/yugipedia1037854.yaml
+++ b/data/rush/yugipedia1037854.yaml
@@ -33,16 +33,11 @@ atk: 1400
 def: 1400
 images:
 - index: 1
-  image: KanantheSwordmistress-RD????-JP-OP.png
+  image: KanantheSwordmistress-RDTDPR-JP-OP.png
 sets:
   ja:
-  - set_number: RD/????-JP001
+  - set_number: RD/TDPR-JP001
     set_name: Rush Duel The Legend of Duelist Promotion Pack
     rarities:
     - Normal Parallel Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1037854
