--- a/data/rush/yugipedia1037860.yaml
+++ b/data/rush/yugipedia1037860.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    TBA
+    Activate this card by shuffling 5 monsters with 0 DEF from your Graveyard into the Deck.
   de:
   es:
   fr:
@@ -26,7 +26,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    TBA
+    While this card is face-up in the Field Zone, face-up monsters on the field gain 500 ATK.
   de:
   es:
   fr:
@@ -37,13 +37,13 @@ effect:
   zh-TW:
   zh-CN:
 card_type: Spell
-property: Normal
+property: Field
 images:
 - index: 1
-  image: DreamLive-RD????-JP-OP.png
+  image: DreamLive-RDTDPR-JP-OP.png
 sets:
   ja:
-  - set_number: RD/????-JP004
+  - set_number: RD/TDPR-JP004
     set_name: Rush Duel The Legend of Duelist Promotion Pack
     rarities:
     - Normal Parallel Rare
