--- a/rush.yaml
+++ b/rush.yaml
@@ -130562,3 +130562,60 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1037913
+---
+konami_id:
+name:
+  en: Threat from Outer Space
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>宇宙<rt>ソラ</rt></ruby>の<ruby>脅<rt>きょう</rt></ruby><ruby>威<rt>い</rt></ruby>
+  ja_romaji: Sora no Kyōi
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Pay 1000 LP.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Send the top card of your Deck to the Graveyard. Then, you can Set that card to your field (if it is a monster, you can Special Summon it in face-down Defense Position). Then, if you Special Summoned a Level 2 monster from the Graveyard by this effect, you can destroy 1 Spell/Trap Card on your opponent's field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+images:
+- index: 1
+  image: ThreatfromOuterSpace-RDKP16-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP16-JP059
+    set_name: Transamu of Transcendence
+    rarities:
+    - Super Rare
+    - Secret Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1037924
