--- a/rush.yaml
+++ b/rush.yaml
@@ -130359,7 +130359,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    If you would normal draw until you have 5 cards in your hand during the Draw Phase while your opponent has 3 monsters on their field, normal draw until you have 6 cards in your hand instead.
+    If you would conduct a normal draw until you have 5 cards in your hand during the Draw Phase while your opponent has 3 monsters on their field, conduct a normal draw until you have 6 cards in your hand instead.
   de:
   es:
   fr:
@@ -130419,7 +130419,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, 1 face-up monster on your opponent's field gains 1000 ATK and cannot be destroyed by battle.
+    This turn, 1 face-up monster on your opponent's field gains 1000 ATK, and cannot be destroyed by battle.
   de:
   es:
   fr:
@@ -130591,7 +130591,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top card of your Deck to the Graveyard. Then, you can Set that card to your field (if it is a monster, you can Special Summon it in face-down Defense Position). Then, if you Special Summoned a Level 2 monster from the Graveyard by this effect, you can destroy 1 Spell/Trap Card on your opponent's field.
+    Send the top card of your Deck to the Graveyard. Then, you can Set it to your field (if it was a monster, you can Special Summon it in face-down Defense Position). If you Special Summoned a Level 2 monster from the Graveyard by this effect, you can also destroy 1 Spell/Trap Card on your opponent's field.
   de:
   es:
   fr:
