--- a/data/rush/16805.yaml
+++ b/data/rush/16805.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Choose 1 face-up LIGHT Attribute Machine Type monster on your field. If it attacks a Defense Position monster this turn, inflict piercing battle damage. Then, if you have a face-up Machine Type Normal Monster ​on your field, inflict 500 damage to your opponent.
+    Choose 1 face-up LIGHT Attribute Machine Type monster on your field. If this monster attacks a Defense Position monster this turn, inflict piercing battle damage. Then, if you have a face-up Machine Type Normal Monster ​on your field, inflict 500 damage to your opponent.
   de:
   es:
   fr:
@@ -66,9 +66,4 @@ sets:
     set_name: Go Rush Deck - Jointech Attack
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 717296
