--- a/data/rush/17486.yaml
+++ b/data/rush/17486.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Choose 1 monster on your opponent's field, and toss a coin 3 times. If at least 2 of the results are heads, destroy it.
+    Choose 1 monster on your opponent's field, and toss a coin 3 times. Destroy it if at least 2 of the results are heads.
   de:
   es:
   fr:
@@ -68,7 +68,4 @@ sets:
     rarities:
     - Secret Rare
     - Rush Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 713467
