--- a/data/rush/16711.yaml
+++ b/data/rush/16711.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have 2 or more face-up Beast Type and/or Beast-Warrior Type monsters on your field.
+    You have 2 or more face-up Warrior Type and/or Beast-Warrior Type monsters on your field.
   de:
   es:
   fr:
@@ -64,7 +64,4 @@ sets:
     set_name: Legend Awakening Pack
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 716353
