--- a/data/cards/05592689.yaml
+++ b/data/cards/05592689.yaml
@@ -12,7 +12,7 @@ name:
   ko: 새크리파이스 로터스
   ko_rr:
   zh-TW:
-  zh-CN: 献祭之莲
+  zh-CN: 纳祭魔莲
 text:
   en: |-
     During your End Phase, if you control no Spell or Trap Cards, you can Special Summon this card from your Graveyard in face-up Attack Position. This card's controller takes 1000 damage during each of their Standby Phases.
@@ -33,7 +33,8 @@ text:
   zh-TW: |-
     我方結束階段時，在此卡存在墓地，我方場上不存在魔法・陷阱卡的狀況下，此卡可從墓地以攻擊表示特殊召喚。在此卡以正面表示存在於場上的狀況下，我方在我方每次的準備階段受到１０００傷害。
   zh-CN: |-
-    自己的结束阶段时这张卡在墓地存在，自己场上没有魔法·陷阱卡存在的场合，可以在自己场上表侧攻击表示特殊召唤。这张卡在场上表侧表示存在的场合，每次自己的准备阶段这张卡的控制者受到1000分伤害。
+    ①：在自己的准备阶段发动。此卡存在于怪兽区域的情况下，自己受到１０００伤害。
+    ②：在自己的结束阶段，此卡存在于墓地的情况下可以发动。将此卡以攻击表示特殊召唤。此效果在自己场上不存在魔法・陷阱卡的情况下才能进行发动和处理。
 card_type: Monster
 monster_type_line: Plant / Effect
 attribute: DARK
