--- a/data/cards/21452275.yaml
+++ b/data/cards/21452275.yaml
@@ -12,7 +12,7 @@ name:
   ko: 아로마포트
   ko_rr:
   zh-TW:
-  zh-CN: 芳香炉
+  zh-CN: 芬芳炉
 text:
   en: |-
     If this card is flipped face-up, this card cannot be destroyed by battle while it is face-up on the field. If this card is flipped face-up, during each player's End Phase: You gain 500 LP.
@@ -33,7 +33,8 @@ text:
   zh-TW: |-
     ①：只要反轉的此卡以正面表示存在於怪獸區，此卡就不會因戰鬥被破壞。②：在反轉的此卡以正面表示存在於怪獸區的狀況下，在每次雙方的結束階段發動。我方回復５００LP。
   zh-CN: |-
-    ①：只要反转过的这张卡在怪兽区域表侧表示存在，这张卡不会被战斗破坏。②：反转过的这张卡在怪兽区域表侧表示存在的场合，每次双方的结束阶段发动。自己回复500基本分。
+    ①：只要反转的此卡存在于怪兽区域，此卡不会因战斗被破坏。
+    ②：反转的此卡存在于怪兽区域的情况下，在自己・对手的结束阶段发动。自己恢复５００LP。
 card_type: Monster
 monster_type_line: Rock / Flip / Effect
 attribute: WIND
