--- a/data/cards/67797569.yaml
+++ b/data/cards/67797569.yaml
@@ -12,7 +12,7 @@ name:
   ko: 라바르바르 샐러맨더
   ko_rr: Rabareubareu Saelleomaendeo
   zh-TW:
-  zh-CN: 熔岩谷火精龙
+  zh-CN: 岩浆炎炎・沙罗曼蛇
 text:
   en: |-
     1 Tuner + 1+ non-Tuner FIRE monsters
@@ -42,10 +42,10 @@ text:
     協調＋協調以外的炎屬性怪獸１隻以上
     此卡名的①效果，１回合僅限使用１次。①：可在此卡同步召喚成功的狀況下發動。我方從牌組抽２張牌，其後從手牌將包含炎屬性怪獸在內的２張卡送至墓地。在手牌沒有炎屬性怪獸的狀況下，將手牌全部公開後送回牌組。②：１回合１次，可將我方墓地中的１隻炎屬性怪獸除外發動。根據我方場上的「岩漿炎」怪獸數量，選擇對方場上的正面表示怪獸，變為反面守備表示。
   zh-CN: |-
-    调整＋调整以外的炎属性怪兽1只以上
-    这个卡名的①的效果1回合只能使用1次。
-    ①：这张卡同调召唤成功的场合才能发动。自己从卡组抽2张，那之后从手卡把包含炎属性怪兽的2张卡送去墓地。手卡没有炎属性怪兽的场合，手卡全部公开，回到卡组。
-    ②：1回合1次，从自己墓地把1只炎属性怪兽除外才能发动。选最多有自己场上的「熔岩」怪兽数量的对方场上的表侧表示怪兽变成里侧守备表示。
+    协调＋协调以外的炎属性怪兽１只以上
+    此卡名的①效果１回合仅可使用１次。
+    ①：此卡同步召唤的情况下可以发动。自己抽２张。然后，从手牌挑选包含炎属性怪兽在内的２张卡送至墓地。手牌没有炎属性怪兽的情况下，将手牌全部公开并放回牌组。
+    ②：１回合１次，从自己的墓地将１只炎属性怪兽除外可以发动。将对手场上的表侧表示怪兽改成里侧守备表示，数量最多为自己场上的“岩浆炎”怪兽的数量。
 card_type: Monster
 monster_type_line: Dragon / Synchro / Effect
 attribute: FIRE
