--- a/data/cards/yugipedia1037901.yaml
+++ b/data/cards/yugipedia1037901.yaml
@@ -7,7 +7,7 @@ name:
   fr:
   it:
   pt:
-  ja: <ruby>廻<rt>めぐ</rt></ruby>る<ruby>罪宝<rt>ざいほう</rt></ruby>
+  ja: <ruby>廻<rt>めぐ</rt></ruby>る<ruby>罪<rt>ざい</rt></ruby><ruby>宝<rt>ほう</rt></ruby>
   ja_romaji: Meguru Zaihō
   ko:
   ko_rr:
