--- a/data/cards/00425934.yaml
+++ b/data/cards/00425934.yaml
@@ -12,7 +12,7 @@ name:
   ko: 욕망의 고블린
   ko_rr:
   zh-TW:
-  zh-CN: 强欲哥布林
+  zh-CN: 强欲格布林
 text:
   en: |-
     As long as this card remains face-up on your side of the field, neither player can activate an effect by discarding from his/her hand.
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     只要此卡以正面表示存在於場上，雙方就無法發動捨棄手牌發動的效果。
   zh-CN: |-
-    只要这张卡表侧表示在自己场上存在，双方不能把「通过丢弃手卡的卡发动的效果」发动。
+    ①：只要此卡存在于怪兽区域，双方不可发动“舍弃手牌来发动的效果”。
 card_type: Monster
 monster_type_line: Fiend / Effect
 attribute: EARTH
