--- a/data/cards/03627449.yaml
+++ b/data/cards/03627449.yaml
@@ -12,7 +12,7 @@ name:
   ko: 로가디언
   ko_rr:
   zh-TW:
-  zh-CN: 法理守护者
+  zh-CN: 律守护者
 text:
   en: |-
     This monster can only be Ritual Summoned with the Ritual Spell Card, "Novox's Prayer". You must also offer monsters whose total Level Stars equal 7 or more as a Tribute from the field or your hand.
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     以「法律的祈禱」降臨。
   zh-CN: |-
-    「法理的祈祷」降临。必须从场上或手卡把星数直到合计7个以上的卡作为祭品。
+    以“律之祈祷”降临
 card_type: Monster
 monster_type_line: Warrior / Ritual
 attribute: LIGHT
