--- a/data/cards/14536035.yaml
+++ b/data/cards/14536035.yaml
@@ -12,7 +12,7 @@ name:
   ko: 다크 그레퍼
   ko_rr:
   zh-TW:
-  zh-CN: 暗黑战士 格雷法
+  zh-CN: 暗黑古雷法
 text:
   en: |-
     You can Special Summon this card (from your hand) by discarding 1 Level 5 or higher DARK monster. Once per turn: You can discard 1 DARK monster; send 1 DARK monster from your Deck to the GY.
@@ -33,7 +33,8 @@ text:
   zh-TW: |-
     ①：可捨棄手牌１隻等級５以上的闇屬性怪獸，從手牌特殊召喚此卡。②：１回合１次，可從手牌捨棄１隻闇屬性怪獸發動。從牌組將１隻闇屬性怪獸送至墓地。
   zh-CN: |-
-    ①：这张卡可以从手卡丢弃1只5星以上的暗属性怪兽，从手卡特殊召唤。②：1回合1次，从手卡丢弃1只暗属性怪兽才能发动。从卡组把1只暗属性怪兽送去墓地。
+    ①：此卡可从手牌将１只等级５以上的暗属性怪兽舍弃来从手牌特殊召唤。
+    ②：１回合１次，从手牌将１只暗属性怪兽舍弃可以发动。从牌组将１只暗属性怪兽送至墓地。
 card_type: Monster
 monster_type_line: Warrior / Effect
 attribute: DARK
