--- a/data/cards/21903613.yaml
+++ b/data/cards/21903613.yaml
@@ -12,7 +12,7 @@ name:
   ko: 삼라의 무답랑 피오네
   ko_rr: Samra-ui Mudaprang Pione
   zh-TW:
-  zh-CN: 森罗的舞蹈娘 先锋葡萄
+  zh-CN: 森罗舞娘 锋萄
 text:
   en: |-
     2 Plant monsters
@@ -42,8 +42,10 @@ text:
     植物族怪獸２隻
     此卡名的①②效果，１回合各僅限使用１次。①：可在此卡連結召喚成功的狀況下發動。從我方牌組的上方最多翻開３張卡。在其中有植物族怪獸的狀況下，從其中最多選擇２隻特殊召喚。剩餘的卡送至墓地。透過此效果特殊召喚的怪獸無法做為連結素材。②：可將我方墓地的１隻植物族怪獸做為對象發動。此卡連結指向的怪獸等級在回合結束前，變為與對象怪獸相同。
   zh-CN: |-
-    植物族怪兽2只
-    这个卡名的①②效果1回合各能使用1次。①：这张卡链接召唤成功的场合可以发动。从自己卡组上面将3张卡翻开。那之中有植物族怪兽的场合，可以选那之中的最多2只特殊召唤，剩下的卡送入墓地。用这个效果特殊召唤的怪兽不能作为链接素材。②：可以以自己墓地的1只植物族怪兽为对象发动。这张卡的链接端的怪兽的等级直到回合结束时变为与对象怪兽相同。
+    植物族怪兽２只
+    此卡名的①②效果１回合仅可各使用１次。
+    ①：此卡连接召唤的情况下可以发动。从自己的牌组上面翻开最多３张卡。其中有植物族怪兽的情况下，可将其中最多２只特殊召唤。将剩余的卡送至墓地。以此效果特殊召唤的怪兽不可作为连接素材。
+    ②：以自己墓地的１只植物族怪兽为对象可以发动。此卡连接端的怪兽的等级直至回合结束时为止，变为与对象怪兽相同。
 card_type: Monster
 monster_type_line: Plant / Link / Effect
 attribute: WIND
