--- a/data/cards/22653490.yaml
+++ b/data/cards/22653490.yaml
@@ -42,7 +42,9 @@ text:
     风属性等级4怪兽×2
     此卡超量召唤成功时，选择对手场上1张被盖牌的卡牌返回至持有者牌组的最下方。此外，1回合1次，可移除此卡的1个超量素材并发动。选择对手场上1张以表侧表示存在的卡牌返回至持有者牌组的最上方。
   zh-CN: |-
-    风属性4星怪兽×2。这张卡XYZ召唤成功时，选择对方场上盖放的1张卡回到持有者卡组最下面。此外，1回合1次，把这张卡1个XYZ素材取除才能发动。选择对方场上表侧表示存在的1张卡回到持有者卡组最上面。
+    风属性等级４怪兽×２
+    ①：此卡超量召唤时，以对手场上１张里侧表示的卡为对象可以发动。将该对手的里侧表示卡放回牌组最下面。
+    ②：１回合１次，去除此卡的１个超量素材，以对手场上的１张表侧表示卡为对象可以发动。将该对手的表侧表示卡放回牌组最上面。
 card_type: Monster
 monster_type_line: Thunder / Xyz / Effect
 attribute: WIND
