--- a/data/cards/23085002.yaml
+++ b/data/cards/23085002.yaml
@@ -12,7 +12,7 @@ name:
   ko: No.68 마천뢰 산달폰
   ko_rr:
   zh-TW:
-  zh-CN: No.68 魔天牢 桑达尔丰
+  zh-CN: 编号68 魔天牢 桑达丰
 text:
   en: |-
     2 Level 8 monsters
@@ -42,8 +42,9 @@ text:
     等級８怪獸×２
     ①：此卡的攻擊力・守備力依據雙方墓地的怪獸的數量×１００進行提升。②：１回合１次，可去除此卡的１個超量素材發動。對方回合結束前，此卡不會因效果被破壞，雙方無法特殊召喚墓地的怪獸。
   zh-CN: |-
-    8星怪兽×2
-    ①：这张卡的攻击力·守备力上升双方墓地的怪兽数量×100。②：1回合1次，把这张卡1个XYZ素材取除才能发动。直到对方回合结束时，这张卡不会被效果破坏，双方不能把墓地的怪兽特殊召唤。
+    等级８怪兽×２
+    ①：此卡的攻击力・守备力上升相当于双方墓地怪兽数量×１００的数值。
+    ②：１回合１次，去除此卡的１个超量素材可以发动。直至对手回合结束时为止，此卡不会因效果被破坏，双方不可特殊召唤墓地的怪兽。
 card_type: Monster
 monster_type_line: Rock / Xyz / Effect
 attribute: DARK
