--- a/data/cards/43047672.yaml
+++ b/data/cards/43047672.yaml
@@ -12,7 +12,7 @@ name:
   ko: <ruby>RR<rt>레이드 랩터즈</rt></ruby>－파이널 포트리스 팔콘
   ko_rr:
   zh-TW:
-  zh-CN: 急袭猛禽-最终要塞猎鹰
+  zh-CN: 急袭猛禽－最终要塞猎鹰
 text:
   en: |-
     3 Level 12 monsters
@@ -42,8 +42,10 @@ text:
     等級１２怪獸×３
     ①：以「急襲猛禽」超量怪獸做為超量素材的此卡不受其他卡的效果影響。②：１回合１次，可去除此卡的１個超量素材發動。將我方被除外的所有「急襲猛禽」怪獸全部送回墓地。③：因此卡的攻擊破壞怪獸時，可將我方墓地的１隻「急襲猛禽」超量怪獸除外發動。此卡可連續進行攻擊。此效果１回合最多可使用２次。
   zh-CN: |-
-    12星怪兽×3
-    ①：有「急袭猛禽」XYZ怪兽在作为XYZ素材中的这张卡不受其他卡的效果影响。②：1回合1次，把这张卡1个XYZ素材取除才能发动。除外的自己的「急袭猛禽」怪兽全部回到墓地。③：这张卡的攻击破坏怪兽时，把自己墓地1只「急袭猛禽」XYZ怪兽除外才能发动。这张卡可以继续攻击。这个效果1回合可以使用最多2次。
+    等级１２怪兽×３
+    ①：持有“急袭猛禽”超量怪兽作为超量素材的此卡不受其他卡的效果影响。
+    ②：１回合１次，去除此卡的１个超量素材可以发动。将自己除外状态的“急袭猛禽”怪兽全部放回墓地。
+    ③：１回合最多２次，以此卡的攻击破坏怪兽时，将自己墓地的１只“急袭猛禽”超量怪兽除外可以发动。此卡可继续攻击。
 card_type: Monster
 monster_type_line: Winged Beast / Xyz / Effect
 attribute: DARK
