--- a/data/cards/43694075.yaml
+++ b/data/cards/43694075.yaml
@@ -12,7 +12,7 @@ name:
   ko: 로의 기도
   ko_rr:
   zh-TW:
-  zh-CN: 法理的祈祷
+  zh-CN: 律之祈祷
 text:
   en: |-
     This card is used to Ritual Summon "Skull Guardian". You must also offer monsters whose total Level Stars equal 7 or more as a Tribute from the field or your hand.
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     「法律守護者」降臨所需。必須為使等級合計為７以上，從手牌・我方場上解放怪獸。
   zh-CN: |-
-    「法理守护者」的降临必需。必须从场上或手卡把星数直到合计7个以上的卡作为祭品。
+    ①：为使等级合计变为７以上，解放自己的手牌・场上的怪兽，从手牌将“律守护者”仪式召唤。
 card_type: Spell
 property: Ritual
 images:
