--- a/data/cards/63941210.yaml
+++ b/data/cards/63941210.yaml
@@ -12,7 +12,7 @@ name:
   ko: 괴성파괴수 지즈키엘
   ko_rr: Goeseongpagoesu Jijeukiel
   zh-TW:
-  zh-CN: 坏星坏兽 席兹奇埃鲁
+  zh-CN: 坏星坏兽 机祖基鲁
 text:
   en: |-
     You can Special Summon this card (from your hand) to your opponent's field in Attack Position, by Tributing 1 monster they control. If your opponent controls a "Kaiju" monster, you can Special Summon this card (from your hand) in Attack Position. You can only control 1 "Kaiju" monster. When a card or effect is activated that targets 1 card (and no other cards) (Quick Effect): You can remove 3 Kaiju Counters from anywhere on the field; negate that effect, and if you do, you can destroy 1 card on the field.
@@ -33,7 +33,10 @@ text:
   zh-TW: |-
     ①：可解放對方場上的１隻怪獸，從手牌以攻擊表示特殊召喚此卡至對方場上。②：在對方場上存在「壞獸」怪獸的狀況下，可從手牌以攻擊表示特殊召喚此卡。③：「壞獸」怪獸在我方場上僅限以正面表示存在１隻。④：在僅以１張卡做為對象的魔法・陷阱・怪獸的效果發動時，可去除我方・對方場上的３個壞獸計數物發動。將該效果變為無效，可選擇場上的１張卡破壞。
   zh-CN: |-
-    ①：这张卡可以把对方场上1只怪兽解放，从手卡往对方场上攻击表示特殊召唤。②：对方场上有「坏兽」怪兽存在的场合，这张卡可以从手卡攻击表示特殊召唤。③：「坏兽」怪兽在自己场上只能有1只表侧表示存在。④：只以卡1张为对象的魔法·陷阱·怪兽的效果发动时，把自己·对方场上3个坏兽指示物取除才能发动。那个效果无效，可以选场上1张卡破坏。
+    ①：此卡可以解放对手场上１只怪兽，以攻击表示从手牌特殊召唤至对手场上。
+    ②：对手场上存在“坏兽”怪兽的情况下，此卡可以从手牌中以攻击表示特殊召唤。
+    ③：“坏兽”怪兽在自己场上仅可有１只以表侧表示形式存在。
+    ④：仅以１张卡为对象的魔法・陷阱・怪兽的效果发动时，去除自己・对手场上的３个坏兽计数物可以发动。将该效果无效，可将场上的１张卡破坏。
 card_type: Monster
 monster_type_line: Machine / Effect
 attribute: LIGHT
