--- a/data/cards/75376965.yaml
+++ b/data/cards/75376965.yaml
@@ -12,7 +12,7 @@ name:
   ko: 황홀한 인어
   ko_rr:
   zh-TW:
-  zh-CN: 恍惚的人鱼
+  zh-CN: 恍惚人鱼
 text:
   en: |-
     A beautiful mermaid that lures voyagers to a watery grave.
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     誘惑海上航海者，使其溺水的美麗人魚。
   zh-CN: |-
-    诱惑海上航海者使之溺水的美丽人鱼。
+    诱惑航海者并使之沉溺的美丽人鱼。
 card_type: Monster
 monster_type_line: Fish / Normal
 attribute: WATER
