--- a/data/cards/78658564.yaml
+++ b/data/cards/78658564.yaml
@@ -12,7 +12,7 @@ name:
   ko: 고블린의 돌격 부대
   ko_rr:
   zh-TW: 格布林突擊部隊
-  zh-CN: 哥布林突击部队
+  zh-CN: 格布林突击部队
 text:
   en: |-
     If this card attacks, it is changed to Defense Position at the end of the Battle Phase, and its battle position cannot be changed until the End Phase of your next turn.
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     若此卡攻击过后，于战斗阶段结束时改为守备表示，直到下次我方回合的结束阶段前都不能更改表示形态。
   zh-CN: |-
-    ①：这张卡攻击的场合，战斗阶段结束时变成守备表示，直到下次的自己回合结束时不能把表示形式变更。
+    ①：此卡攻击的情况下，将在战斗阶段结束时变为守备表示，直至下个自己的回合结束时为止，不可变更表示形式。
 card_type: Monster
 monster_type_line: Warrior / Effect
 attribute: EARTH
