--- a/data/cards/83340560.yaml
+++ b/data/cards/83340560.yaml
@@ -12,7 +12,7 @@ name:
   ko: 위대한 더블캐스터
   ko_rr: Widaehan Deobeulkaeseuteo
   zh-TW:
-  zh-CN: 高能双咒术师
+  zh-CN: 伟大的双咒术师
 text:
   en: |-
     2 non-Effect Monsters
@@ -42,8 +42,11 @@ text:
     效果怪獸以外的怪獸×２隻
     此卡名的③效果，１回合僅限使用１次。①：此卡的攻擊力會依據做為此卡融合素材的儀式・融合・同步・超量・連結怪獸原本的攻擊力合計數值進行提升。②：此卡可直接攻擊。③：在此卡因戰鬥・效果被破壞的狀況下，可從我方墓地的怪獸及被除外的我方怪獸中，將１隻效果怪獸以外的怪獸做為對象發動。特殊召喚該怪獸。
   zh-CN: |-
-    效果怪兽以外的怪兽×2
-    ①：这张卡的攻击力上升作为这张卡的融合素材的仪式·融合·同调·多维·链接怪兽的原攻击力的合计数值。②：这张卡可以直接攻击。③：这张卡被战斗或效果破坏的场合，可以从自己墓地的怪兽或者除外中的自己的怪兽之中，以1只效果怪兽以外的怪兽为对象发动。将那只怪兽特殊召唤。
+    效果怪兽以外的怪兽×２
+    此卡名的③效果１回合仅可使用１次。
+    ①：此卡的攻击力上升相当于作为此卡融合素材的仪式・融合・同步・超量・连接怪兽原本攻击力的合计数值。
+    ②：此卡可直接攻击。
+    ③：此卡因战斗・效果被破坏的情况下，以效果怪兽以外的、自己墓地・除外状态的１只怪兽为对象可以发动。将该怪兽特殊召唤。
 card_type: Monster
 monster_type_line: Spellcaster / Fusion / Effect
 attribute: LIGHT
