--- a/data/cards/04796100.yaml
+++ b/data/cards/04796100.yaml
@@ -8,7 +8,7 @@ name:
   it: Chimera, la Mitica Bestia Volante
   pt: Quimera, a Besta Mística Voadora
   ja: <ruby>有<rt>ゆう</rt></ruby><ruby>翼<rt>よく</rt></ruby><ruby>幻<rt>げん</rt></ruby><ruby>獣<rt>じゅう</rt></ruby>キマイラ
-  ja_romaji: Yūyoku Genjū Kimaira
+  ja_romaji: Yūyokugenjū Kimaira
   ko: 유익환상수 키메라
   ko_rr: Yu-ikhwansangsu Kimera
   zh-TW:
