--- a/data/cards/41218256.yaml
+++ b/data/cards/41218256.yaml
@@ -40,6 +40,8 @@ attribute: DARK
 level: 3
 atk: 1000
 def: 800
+series:
+- Fan-Made Cards
 images:
 - index: 1
   image: ClawReacher-SDY-NA-C-1E.png
