--- a/data/rush/17892.yaml
+++ b/data/rush/17892.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Toss a coin. If the result is heads, draw 2 cards. If the result is tails, draw 1 card.
+    Toss a coin. Draw 2 cards if the result is heads. Draw 1 card if the result is tails.
   de:
   es:
   fr:
