--- a/data/rush/19313.yaml
+++ b/data/rush/19313.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Toss a coin. If the result is heads, all face-up monsters on your field gain 500 ATK until the end of this turn. If the result is tails, you can make 1 face-up monster on your opponent's field lose 800 ATK/DEF until the end of this turn.
+    Toss a coin. All face-up monsters on your field gain 500 ATK until the end of this turn if the result is heads. You can make 1 face-up monster on your opponent's field lose 800 ATK/DEF until the end of this turn if the result is tails.
   de:
   es:
   fr:
