--- a/data/cards/37313348.yaml
+++ b/data/cards/37313348.yaml
@@ -40,6 +40,8 @@ attribute: WATER
 level: 4
 atk: 1000
 def: 1500
+series:
+- Fan-Made Cards
 images:
 - index: 1
   image: TurtleTiger-LOB-EN-C-UE-25thAnniversaryEdition.png
