--- a/data/cards/72842870.yaml
+++ b/data/cards/72842870.yaml
@@ -40,6 +40,8 @@ attribute: WIND
 level: 4
 atk: 1200
 def: 1400
+series:
+- Fan-Made Cards
 images:
 - index: 1
   image: Tyhone-LOB-EN-C-UE-25thAnniversaryEdition.png
