--- a/data/rush/17924.yaml
+++ b/data/rush/17924.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Choose 1 card on your opponent's field, and toss a coin twice. If the result is 2 heads, destroy it.
+    Choose 1 card on your opponent's field, and toss a coin twice. Destroy it if the result is 2 heads.
   de:
   es:
   fr:
