--- a/data/rush/19436.yaml
+++ b/data/rush/19436.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Toss a coin. If the result is heads, destroy all monsters on your opponent's field. If the result is tails, destroy all monsters on your field, and take damage equal to [the total original ATK of the monsters destroyed by this effect].
+    Toss a coin. Destroy all monsters on your opponent's field if the result is heads. Destroy all monsters on your field, and take damage equal to [the total original ATK of the monsters destroyed by this effect], if the result is tails.
   de:
   es:
   fr:
