--- a/rush.yaml
+++ b/rush.yaml
@@ -75265,7 +75265,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Toss a coin. If the result is heads, inflict 1000 damage to your opponent. If the result is tails, take 1000 damage.
+    Toss a coin. Inflict 1000 damage to your opponent if the result is heads. Take 1000 damage if the result is tails.
   de:
   es:
   fr:
@@ -75416,7 +75416,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Toss a coin. If the result is heads, draw 2 cards. If the result is tails, draw 1 card.
+    Toss a coin. Draw 2 cards if the result is heads. Draw 1 card if the result is tails.
   de:
   es:
   fr:
@@ -76893,7 +76893,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Choose 1 card on your opponent's field, and toss a coin twice. If the result is 2 heads, destroy it.
+    Choose 1 card on your opponent's field, and toss a coin twice. Destroy it if the result is 2 heads.
   de:
   es:
   fr:
@@ -77790,7 +77790,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Toss a coin. If the result is heads, this turn, this card gains 1500 ATK, and your opponent cannot activate Trap Cards when it declares an attack. If the result is tails, change this card to face-up Defense Position.
+    Toss a coin. This turn, this card gains 1500 ATK, and your opponent cannot activate Trap Cards when it declares an attack, if the result is heads. Change this card to face-up Defense Position if the result is tails.
   de:
   es:
   fr:
@@ -97717,7 +97717,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Toss a coin. If the result is heads, this card gains 1000 ATK until the end of this turn. If the result is tails, send this card from your field to the Graveyard, and draw 1 card.
+    Toss a coin. This card gains 1000 ATK until the end of this turn if the result is heads. Send this card from your field to the Graveyard, and draw 1 card, if the result is tails.
   de:
   es:
   fr:
@@ -97932,7 +97932,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Toss a coin a number of times equal to [the number of face-up monsters on your opponent's field]. If at least 1 of the results is heads, this card can attack twice during this turn. Then, if the result is 3 heads, this card inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference), if it attacks a Defense Position monster this turn.
+    Toss a coin a number of times equal to [the number of face-up monsters on your opponent's field]. This card can attack twice during this turn if at least 1 of the results is heads. Then, this card inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference), if it attacks a Defense Position monster this turn and the result is 3 heads.
   de:
   es:
   fr:
@@ -111047,7 +111047,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card loses 600 ATK until the end of this turn. Then, toss a coin. If the result is heads, this card can make a second and third attack during this turn. If the result is tails, this turn, this card can make up to 2 attacks on monsters, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
+    This card loses 600 ATK until the end of this turn. Then, toss a coin. This card can make a second and third attack during this turn if the result is heads. This turn, this card can make up to 2 attacks on monsters, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference), if the result is tails.
   de:
   es:
   fr:
@@ -113500,7 +113500,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Toss a coin. If the result is heads, all face-up monsters on your field gain 500 ATK until the end of this turn. If the result is tails, you can make 1 face-up monster on your opponent's field lose 800 ATK/DEF until the end of this turn.
+    Toss a coin. All face-up monsters on your field gain 500 ATK until the end of this turn if the result is heads. You can make 1 face-up monster on your opponent's field lose 800 ATK/DEF until the end of this turn if the result is tails.
   de:
   es:
   fr:
@@ -113859,7 +113859,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send 1 monster from your field to the Graveyard. Then, you can add 1 EARTH Attribute Machine Type Maximum Monster from your Graveyard to your hand. If you do, toss a coin twice. If the result is 2 heads, draw 1 card.
+    Send 1 monster from your field to the Graveyard. Then, you can add 1 EARTH Attribute Machine Type Maximum Monster from your Graveyard to your hand. If you do, toss a coin twice. Draw 1 card if the result is 2 heads.
   de:
   es:
   fr:
@@ -116661,7 +116661,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Toss a coin. If the result is heads, destroy all monsters on your opponent's field. If the result is tails, destroy all monsters on your field, and take damage equal to [the total original ATK of the monsters destroyed by this effect].
+    Toss a coin. Destroy all monsters on your opponent's field if the result is heads. Destroy all monsters on your field, and take damage equal to [the total original ATK of the monsters destroyed by this effect], if the result is tails.
   de:
   es:
   fr:
